# expense-logger

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml
agent/: categories.py  db.py  main.py  tools.py
api/: auth.py  server.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
frontend/e2e/: breakdown.spec.js  budgets.spec.js  chat.spec.js  expenses.spec.js  fixtures.js  login.spec.js
frontend/public/: manifest.webmanifest
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/components/: Chat.jsx  ExpenseTable.jsx  Login.jsx
frontend/src/components/ui/: badge.jsx  button-variants.js  button.jsx  drawer.jsx  sonner.jsx  tooltip.jsx
frontend/src/hooks/: use-media-query.js
scripts/: seed_e2e_data.py  seed_users.py
tests/: conftest.py  test_agent.py  test_api.py  test_db.py
