[project]
name = "expense-logger"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.109.1",
    "bcrypt>=5.0.0",
    "fastapi>=0.136.3",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "uvicorn>=0.49.0",
]
